# YTSage

./: .gitignore  MANIFEST.in  README.md  YTSage.py  build_release.py  main.py  pyproject.toml  requirements.txt  ytsage_downloader.py  ytsage_gui.py  ytsage_gui_dialogs.py  ytsage_gui_main.py  ytsage_gui_video_info.py  ytsage_style.py  ytsage_utils.py  ytsage_yt_dlp.py
.github/: CI_CD_README.md
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release-all.yml
branding/icons/: icon.icns
languages/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  pl.json  pt.json  ru.json  tr.json  zh.json
readme-translations/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.pl.md  README.pt.md  README.ru.md  README.tr.md  README.zh.md
src/: __init__.py
src/core/: __init__.py  ytdlp_manager.py  ytsage_deno.py  ytsage_downloader.py  ytsage_ffmpeg.py  ytsage_ffmpeg_updater.py  ytsage_logging.py  ytsage_style.py  ytsage_utils.py  ytsage_yt_dlp.py
src/gui/: ytsage_gui_analysis.py  ytsage_gui_dialogs.py  ytsage_gui_format_table.py  ytsage_gui_main.py  ytsage_gui_video_info.py  ytsage_stylesheet.py
src/utils/: ytsage_config_manager.py  ytsage_constants.py  ytsage_history_manager.py  ytsage_localization.py  ytsage_logger.py
ytsage/: __init__.py  main.py
ytsage/core/: ytsage_deno.py  ytsage_downloader.py  ytsage_ffmpeg.py  ytsage_utils.py  ytsage_yt_dlp.py
ytsage/gui/: __init__.py  ytsage_gui_analysis.py  (+4 more)
(+45 files in other folders)
